cmake_minimum_required(VERSION 3.17)
project(t6mp)

set(CMAKE_CXX_STANDARD 11)

include_directories(code/src_noserver code/nvapi code/tl)
link_directories(code/nvapi/x86)

add_executable(t6mp WIN32
		code/src_noserver/aim_assist/aim_assist.cpp
		code/src_noserver/aim_assist/aim_assist_public.h
		code/src_noserver/aim_assist/aim_target.cpp
		code/src_noserver/bgame/bg_actor.cpp
		code/src_noserver/bgame/bg_actor_dog.cpp
		code/src_noserver/bgame/bg_actor_dog_animations_mp.cpp
		code/src_noserver/bgame/bg_actor_prone.cpp
		code/src_noserver/bgame/bg_animation.cpp
		code/src_noserver/bgame/bg_animconditions.cpp
		code/src_noserver/bgame/bg_animstatedef.cpp
		code/src_noserver/bgame/bg_attachment_load_db.h
		code/src_noserver/bgame/bg_attachment_unique_load_db.h
		code/src_noserver/bgame/bg_attachments_load_obj.cpp
		code/src_noserver/bgame/bg_attachments_unique_load_obj.cpp
		code/src_noserver/bgame/bg_clientfields.cpp
		code/src_noserver/bgame/bg_common_load_db.h
		code/src_noserver/bgame/bg_dtp.cpp
		code/src_noserver/bgame/bg_emblems.cpp
		code/src_noserver/bgame/bg_emblems_load_db.h
		code/src_noserver/bgame/bg_faction.cpp
		code/src_noserver/bgame/bg_helicopter.cpp
		code/src_noserver/bgame/bg_jump.cpp
		code/src_noserver/bgame/bg_mantle.cpp
		code/src_noserver/bgame/bg_misc.cpp
		code/src_noserver/bgame/bg_misctables.cpp
		code/src_noserver/bgame/bg_mover.cpp
		code/src_noserver/bgame/bg_mover.h
		code/src_noserver/bgame/bg_perks.cpp
		code/src_noserver/bgame/bg_perks.h
		code/src_noserver/bgame/bg_pmove.cpp
		code/src_noserver/bgame/bg_public.h
		code/src_noserver/bgame/bg_scriptmoveranim.cpp
		code/src_noserver/bgame/bg_slidemove.cpp
		code/src_noserver/bgame/bg_unlockable_items.cpp
		code/src_noserver/bgame/bg_unlockable_items_mp.cpp
		code/src_noserver/bgame/bg_vehicle.cpp
		code/src_noserver/bgame/bg_vehicle_anim.cpp
		code/src_noserver/bgame/bg_vehicle_csptable.cpp
		code/src_noserver/bgame/bg_vehicleinfo_db.h
		code/src_noserver/bgame/bg_vehicleinfo_load_db.h
		code/src_noserver/bgame/bg_vehicleinfo_load_obj.cpp
		code/src_noserver/bgame/bg_vehicles_mp.cpp
		code/src_noserver/bgame/bg_weapons.cpp
		code/src_noserver/bgame/bg_weapons.h
		code/src_noserver/bgame/bg_weapons_ammo.cpp
		code/src_noserver/bgame/bg_weapons_ammo.h
		code/src_noserver/bgame/bg_weapons_attachment.cpp
		code/src_noserver/bgame/bg_weapons_def.cpp
		code/src_noserver/bgame/bg_weapons_load_db.h
		code/src_noserver/bgame/bg_weapons_load_obj.cpp
		code/src_noserver/bgame/bg_weapons_util.cpp
		code/src_noserver/bgame/bg_weapons_util.h
		code/src_noserver/bgame/bg_weapons_view.cpp
		code/src_noserver/bgame/bg_wind.cpp
		code/src_noserver/bgame/bgame_public.h
		code/src_noserver/botlib/botlib_public.h
		code/src_noserver/botlib/l_memory.cpp
		code/src_noserver/botlib/l_precomp.cpp
		code/src_noserver/botlib/l_script.cpp
		code/src_noserver/cgame/cg_ammocounter.cpp
		code/src_noserver/cgame/cg_bolt.cpp
		code/src_noserver/cgame/cg_camera.cpp
		code/src_noserver/cgame/cg_camerashake.cpp
		code/src_noserver/cgame/cg_colltree.cpp
		code/src_noserver/cgame/cg_compass.cpp
		code/src_noserver/cgame/cg_draw_debug.cpp
		code/src_noserver/cgame/cg_draw_indicators.cpp
		code/src_noserver/cgame/cg_draw_names.cpp
		code/src_noserver/cgame/cg_draw_reticles.cpp
		code/src_noserver/cgame/cg_drawtools.cpp
		code/src_noserver/cgame/cg_effects_load_db.h
		code/src_noserver/cgame/cg_effects_load_obj.cpp
		code/src_noserver/cgame/cg_event.cpp
		code/src_noserver/cgame/cg_footstepfxtable_load_db.h
		code/src_noserver/cgame/cg_footsteptable_load_db.h
		code/src_noserver/cgame/cg_hudelem.cpp
		code/src_noserver/cgame/cg_info.cpp
		code/src_noserver/cgame/cg_laser.cpp
		code/src_noserver/cgame/cg_local.h
		code/src_noserver/cgame/cg_localents.cpp
		code/src_noserver/cgame/cg_main.cpp
		code/src_noserver/cgame/cg_mem_track.cpp
		code/src_noserver/cgame/cg_perf.cpp
		code/src_noserver/cgame/cg_playerstate.cpp
		code/src_noserver/cgame/cg_pose.cpp
		code/src_noserver/cgame/cg_pose.h
		code/src_noserver/cgame/cg_pose_utils.cpp
		code/src_noserver/cgame/cg_rumble.cpp
		code/src_noserver/cgame/cg_scr_main.cpp
		code/src_noserver/cgame/cg_scr_main.h
		code/src_noserver/cgame/cg_shellshock.cpp
		code/src_noserver/cgame/cg_sound.cpp
		code/src_noserver/cgame/cg_spawn.cpp
		code/src_noserver/cgame/cg_vehicle.cpp
		code/src_noserver/cgame/cg_vehicle_hud.cpp
		code/src_noserver/cgame/cg_visionsets.cpp
		code/src_noserver/cgame/cg_weapon_attachments.cpp
		code/src_noserver/cgame/cg_weapon_utils.cpp
		code/src_noserver/cgame/cg_weapons.cpp
		code/src_noserver/cgame/cg_world.cpp
		code/src_noserver/cgame/cgame_public.h
		code/src_noserver/cgame/offhandweapons.cpp
		code/src_noserver/cgame_mp/cg_actors_mp.cpp
		code/src_noserver/cgame_mp/cg_animscripted_mp.cpp
		code/src_noserver/cgame_mp/cg_animtree_mp.cpp
		code/src_noserver/cgame_mp/cg_compassfriendlies_mp.cpp
		code/src_noserver/cgame_mp/cg_consolecmds_mp.cpp
		code/src_noserver/cgame_mp/cg_draw_mp.cpp
		code/src_noserver/cgame_mp/cg_draw_net_mp.cpp
		code/src_noserver/cgame_mp/cg_ents_mp.cpp
		code/src_noserver/cgame_mp/cg_gamepad.cpp
		code/src_noserver/cgame_mp/cg_killcam.cpp
		code/src_noserver/cgame_mp/cg_local_mp.h
		code/src_noserver/cgame_mp/cg_main_mp.cpp
		code/src_noserver/cgame_mp/cg_newdraw_mp.cpp
		code/src_noserver/cgame_mp/cg_players_mp.cpp
		code/src_noserver/cgame_mp/cg_predict_mp.cpp
		code/src_noserver/cgame_mp/cg_scoreboard_mp.cpp
		code/src_noserver/cgame_mp/cg_scoreboard_zm.cpp
		code/src_noserver/cgame_mp/cg_scr_main_mp.cpp
		code/src_noserver/cgame_mp/cg_servercmds_mp.cpp
		code/src_noserver/cgame_mp/cg_snapshot_mp.cpp
		code/src_noserver/cgame_mp/cg_vehicles_mp.cpp
		code/src_noserver/cgame_mp/cg_view_mp.cpp
		code/src_noserver/cgame_mp/cg_weapon_options.cpp
		code/src_noserver/cgame_mp/cgame_mp_public.h
		code/src_noserver/client/cl_compositing.cpp
		code/src_noserver/client/cl_console.cpp
		code/src_noserver/client/cl_debugdata.cpp
		code/src_noserver/client/cl_devgui.cpp
		code/src_noserver/client/cl_gamepad.cpp
		code/src_noserver/client/cl_input.cpp
		code/src_noserver/client/cl_keys.cpp
		code/src_noserver/client/cl_main.cpp
		code/src_noserver/client/cl_main_dw.cpp
		code/src_noserver/client/cl_main_pc.cpp
		code/src_noserver/client/cl_migration.cpp
		code/src_noserver/client/cl_parse.cpp
		code/src_noserver/client/client.h
		code/src_noserver/client/client_public.h
		code/src_noserver/client/con_channels.cpp
		code/src_noserver/client/screen_placement.cpp
		code/src_noserver/client/screen_placement.h
		code/src_noserver/client/splitscreen.cpp
		code/src_noserver/clientscript/clientscript_public.h
		code/src_noserver/clientscript/cscr_animtree.cpp
		code/src_noserver/clientscript/cscr_compiler.cpp
		code/src_noserver/clientscript/cscr_debugger.cpp
		code/src_noserver/clientscript/cscr_evaluate.cpp
		code/src_noserver/clientscript/cscr_instance.cpp
		code/src_noserver/clientscript/cscr_main.cpp
		code/src_noserver/clientscript/cscr_memorytree.cpp
		code/src_noserver/clientscript/cscr_obj_compiler.cpp
		code/src_noserver/clientscript/cscr_parser.cpp
		code/src_noserver/clientscript/cscr_parsetree.cpp
		code/src_noserver/clientscript/cscr_readwrite.cpp
		code/src_noserver/clientscript/cscr_stringlist.cpp
		code/src_noserver/clientscript/cscr_tempmemory.cpp
		code/src_noserver/clientscript/cscr_variable.cpp
		code/src_noserver/clientscript/cscr_vm.cpp
		code/src_noserver/clientscript/scr_lex.h
		code/src_noserver/clientscript/scr_lex.txt
		code/src_noserver/clientscript/scr_stringlist.h
		code/src_noserver/clientscript/scr_variable.h
		code/src_noserver/clientscript/scr_yacc.txt
		code/src_noserver/client_mp/cl_cgame_mp.cpp
		code/src_noserver/client_mp/cl_input_mp.cpp
		code/src_noserver/client_mp/cl_main_mp.cpp
		code/src_noserver/client_mp/cl_milestone.cpp
		code/src_noserver/client_mp/cl_net_chan_mp.cpp
		code/src_noserver/client_mp/cl_parse_mp.cpp
		code/src_noserver/client_mp/cl_pose_mp.cpp
		code/src_noserver/client_mp/cl_rank.cpp
		code/src_noserver/client_mp/cl_scrn_mp.cpp
		code/src_noserver/client_mp/cl_ui_mp.cpp
		code/src_noserver/client_mp/cl_voice.cpp
		code/src_noserver/client_mp/client_mp_public.h
		code/src_noserver/client_mp/party.cpp
		code/src_noserver/client_mp/party_local.h
		code/src_noserver/client_mp/partyhost.cpp
		code/src_noserver/client_mp/partymigrate.cpp
		code/src_noserver/client_mp/partyprober.cpp
		code/src_noserver/client_mp/partyui.cpp
		code/src_noserver/database/database_public.h
		code/src_noserver/database/db_assetlist_load.h
		code/src_noserver/database/db_assetnames.cpp
		code/src_noserver/database/db_auth_sha1.cpp
		code/src_noserver/database/db_file_load.cpp
		code/src_noserver/database/db_gump.cpp
		code/src_noserver/database/db_memory.cpp
		code/src_noserver/database/db_primtypes_load.h
		code/src_noserver/database/db_registry.cpp
		code/src_noserver/database/db_registry.h
		code/src_noserver/database/db_stream.cpp
		code/src_noserver/database/db_stream_load.cpp
		code/src_noserver/database/db_stringtable_load.cpp
		code/src_noserver/ddl/ddl_api.cpp
		code/src_noserver/ddl/ddl_buffer.cpp
		code/src_noserver/ddl/ddl_buffer.h
		code/src_noserver/ddl/ddl_cmd.cpp
		code/src_noserver/ddl/ddl_converter.cpp
		code/src_noserver/ddl/ddl_load_db.h
		code/src_noserver/ddl/ddl_lookup.cpp
		code/src_noserver/ddl/ddl_public.h
		code/src_noserver/demo/demo_camera.cpp
		code/src_noserver/demo/demo_common.cpp
		code/src_noserver/demo/demo_contentserver.cpp
		code/src_noserver/demo/demo_files.cpp
		code/src_noserver/demo/demo_highlightreel.cpp
		code/src_noserver/demo/demo_party.cpp
		code/src_noserver/demo/demo_playback.cpp
		code/src_noserver/demo/demo_profile.cpp
		code/src_noserver/demo/demo_public.h
		code/src_noserver/demo/demo_recording.cpp
		code/src_noserver/demo/demo_ui.cpp
		code/src_noserver/demo/demo_version.cpp
		code/src_noserver/devgui/devgui.cpp
		code/src_noserver/devgui/devgui_input.cpp
		code/src_noserver/devgui/devgui_public.h
		code/src_noserver/devgui/devgui_util.cpp
		code/src_noserver/dw/dw_public.h
		code/src_noserver/dw/dwmatchmaking.cpp
		code/src_noserver/dw/dwmessaging.cpp
		code/src_noserver/dw/dwnet.cpp
		code/src_noserver/dw/dwqos.cpp
		code/src_noserver/dw/dwrecordevent.cpp
		code/src_noserver/dw/dwstats.cpp
		code/src_noserver/dw/dwstorage.cpp
		code/src_noserver/dw/dwteam.cpp
		code/src_noserver/dw/dwtwitch.cpp
		code/src_noserver/dw/dwutils.cpp
		code/src_noserver/dw/dwvote.cpp
		code/src_noserver/dw/dwyoutube.cpp
		code/src_noserver/dw/leaderboardinfo.cpp
		code/src_noserver/dw/leaderboardinfo.h
		code/src_noserver/dw/matchmakinginfo.cpp
		code/src_noserver/dw/matchrecorder.cpp
		code/src_noserver/dw/teamprofile.cpp
		code/src_noserver/dynentity/dynentity_client.cpp
		code/src_noserver/dynentity/dynentity_coll.cpp
		code/src_noserver/dynentity/dynentity_gamestate.cpp
		code/src_noserver/dynentity/dynentity_load_db.h
		code/src_noserver/dynentity/dynentity_load_obj.cpp
		code/src_noserver/dynentity/dynentity_load_obj.h
		code/src_noserver/dynentity/dynentity_pieces.cpp
		code/src_noserver/dynentity/dynentity_public.h
		code/src_noserver/dynentity/dynentity_server.cpp
		code/src_noserver/effectscore/effectscore_public.h
		code/src_noserver/effectscore/fx_actions.cpp
		code/src_noserver/effectscore/fx_beam.cpp
		code/src_noserver/effectscore/fx_convert.cpp
		code/src_noserver/effectscore/fx_dpvs.cpp
		code/src_noserver/effectscore/fx_draw.cpp
		code/src_noserver/effectscore/fx_draw.h
		code/src_noserver/effectscore/fx_dvars.cpp
		code/src_noserver/effectscore/fx_effect_load_db.h
		code/src_noserver/effectscore/fx_effect_types.h
		code/src_noserver/effectscore/fx_load_obj.cpp
		code/src_noserver/effectscore/fx_marks.cpp
		code/src_noserver/effectscore/fx_marks.h
		code/src_noserver/effectscore/fx_postlight.cpp
		code/src_noserver/effectscore/fx_profile.cpp
		code/src_noserver/effectscore/fx_random.cpp
		code/src_noserver/effectscore/fx_random.h
		code/src_noserver/effectscore/fx_sort.cpp
		code/src_noserver/effectscore/fx_sprite.cpp
		code/src_noserver/effectscore/fx_system.cpp
		code/src_noserver/effectscore/fx_system.h
		code/src_noserver/effectscore/fx_unique_handle.cpp
		code/src_noserver/effectscore/fx_update.cpp
		code/src_noserver/effectscore/fx_update_util.cpp
		code/src_noserver/effectscore/fx_wind.cpp
		code/src_noserver/effectscore/fxcurve.cpp
		code/src_noserver/effectscore/fxcurve.h
		code/src_noserver/effectscore/fxcurve_load_obj.cpp
		code/src_noserver/flame/flame_class_chunk.cpp
		code/src_noserver/flame/flame_class_drips.cpp
		code/src_noserver/flame/flame_class_fire.cpp
		code/src_noserver/flame/flame_class_smoke.cpp
		code/src_noserver/flame/flame_class_stream.cpp
		code/src_noserver/flame/flame_cull.cpp
		code/src_noserver/flame/flame_damage.cpp
		code/src_noserver/flame/flame_physics.cpp
		code/src_noserver/flame/flame_public.h
		code/src_noserver/flame/flame_sound.cpp
		code/src_noserver/flame/flame_system.cpp
		code/src_noserver/from_common/brush_edges.cpp
		code/src_noserver/from_common/from_common_public.h
		code/src_noserver/game/actor.cpp
		code/src_noserver/game/actor_aim.cpp
		code/src_noserver/game/actor_animapi.cpp
		code/src_noserver/game/actor_animscripted.cpp
		code/src_noserver/game/actor_badplace.cpp
		code/src_noserver/game/actor_bigdog_exposed.cpp
		code/src_noserver/game/actor_corpse.cpp
		code/src_noserver/game/actor_death.cpp
		code/src_noserver/game/actor_dog_exposed.cpp
		code/src_noserver/game/actor_event_listeners.cpp
		code/src_noserver/game/actor_events.cpp
		code/src_noserver/game/actor_exposed.cpp
		code/src_noserver/game/actor_fields.cpp
		code/src_noserver/game/actor_generic.cpp
		code/src_noserver/game/actor_lookat.cpp
		code/src_noserver/game/actor_navigation.cpp
		code/src_noserver/game/actor_negotiation.cpp
		code/src_noserver/game/actor_orientation.cpp
		code/src_noserver/game/actor_pain.cpp
		code/src_noserver/game/actor_physics.cpp
		code/src_noserver/game/actor_script_cmd.cpp
		code/src_noserver/game/actor_senses.cpp
		code/src_noserver/game/actor_spawner.cpp
		code/src_noserver/game/actor_state.cpp
		code/src_noserver/game/actor_team_move.cpp
		code/src_noserver/game/actor_threat.cpp
		code/src_noserver/game/actor_zombie.cpp
		code/src_noserver/game/avoid.cpp
		code/src_noserver/game/bullet.cpp
		code/src_noserver/game/enthandle.cpp
		code/src_noserver/game/g_active.cpp
		code/src_noserver/game/g_actor_prone.cpp
		code/src_noserver/game/g_animscripted.cpp
		code/src_noserver/game/g_bsp_load_db.h
		code/src_noserver/game/g_client_common.cpp
		code/src_noserver/game/g_client_fields.cpp
		code/src_noserver/game/g_cmds.cpp
		code/src_noserver/game/g_debug.cpp
		code/src_noserver/game/g_helicopter.cpp
		code/src_noserver/game/g_hudelem.cpp
		code/src_noserver/game/g_items.cpp
		code/src_noserver/game/g_load_utils.cpp
		code/src_noserver/game/g_main_common.cpp
		code/src_noserver/game/g_mem_track.cpp
		code/src_noserver/game/g_missile.cpp
		code/src_noserver/game/g_mover.cpp
		code/src_noserver/game/g_player_corpse.cpp
		code/src_noserver/game/g_scr_main.cpp
		code/src_noserver/game/g_scr_mover.cpp
		code/src_noserver/game/g_stepslide.cpp
		code/src_noserver/game/g_svcmds.cpp
		code/src_noserver/game/g_targets.cpp
		code/src_noserver/game/g_vehicle.cpp
		code/src_noserver/game/g_vehicle_path.cpp
		code/src_noserver/game/g_vehicle_phys.cpp
		code/src_noserver/game/g_vehicle_script_cmd.cpp
		code/src_noserver/game/g_weapon.cpp
		code/src_noserver/game/g_weapon_load_obj.cpp
		code/src_noserver/game/g_zbarrier.cpp
		code/src_noserver/game/game_public.h
		code/src_noserver/game/gamerprofile.cpp
		code/src_noserver/game/gamerprofile_pc.cpp
		code/src_noserver/game/linkto.cpp
		code/src_noserver/game/pathnode.cpp
		code/src_noserver/game/pathnode.h
		code/src_noserver/game/pathnode_load_db.h
		code/src_noserver/game/pathnode_load_obj.cpp
		code/src_noserver/game/scr_const.cpp
		code/src_noserver/game/sentient.cpp
		code/src_noserver/game/sentient.h
		code/src_noserver/game/sentient_fields.cpp
		code/src_noserver/game/turret.cpp
		code/src_noserver/game/vehicle_fields.cpp
		code/src_noserver/game/vehicle_threat.cpp
		code/src_noserver/game_mp/bot.cpp
		code/src_noserver/game_mp/bot.h
		code/src_noserver/game_mp/bot_combat.cpp
		code/src_noserver/game_mp/bot_navigation.cpp
		code/src_noserver/game_mp/bot_navigation.h
		code/src_noserver/game_mp/g_active_mp.cpp
		code/src_noserver/game_mp/g_client_mp.cpp
		code/src_noserver/game_mp/g_client_script_cmd_mp.cpp
		code/src_noserver/game_mp/g_combat_mp.cpp
		code/src_noserver/game_mp/g_main_mp.cpp
		code/src_noserver/game_mp/g_misc_mp.cpp
		code/src_noserver/game_mp/g_public_mp.h
		code/src_noserver/game_mp/g_save_mp.cpp
		code/src_noserver/game_mp/g_scr_helicopter.cpp
		code/src_noserver/game_mp/g_scr_main_mp.cpp
		code/src_noserver/game_mp/g_spawn_mp.cpp
		code/src_noserver/game_mp/g_spawnsystem_mp.cpp
		code/src_noserver/game_mp/g_trigger_mp.cpp
		code/src_noserver/game_mp/g_utils_mp.cpp
		code/src_noserver/game_mp/game_mp_public.h
		code/src_noserver/game_mp/player_use_mp.cpp
		code/src_noserver/game_mp/savememory_mp.cpp
		code/src_noserver/gfx_d3d/gfx_d3d_public.h
		code/src_noserver/gfx_d3d/r_add_bsp.cpp
		code/src_noserver/gfx_d3d/r_add_bsp.h
		code/src_noserver/gfx_d3d/r_add_cmdbuf.h
		code/src_noserver/gfx_d3d/r_add_staticmodel.cpp
		code/src_noserver/gfx_d3d/r_add_staticmodel.h
		code/src_noserver/gfx_d3d/r_adszscale.cpp
		code/src_noserver/gfx_d3d/r_bsp.cpp
		code/src_noserver/gfx_d3d/r_bsp_load_db.h
		code/src_noserver/gfx_d3d/r_bsp_load_obj.cpp
		code/src_noserver/gfx_d3d/r_buffers.cpp
		code/src_noserver/gfx_d3d/r_cinematic.cpp
		code/src_noserver/gfx_d3d/r_cinematic_bink.cpp
		code/src_noserver/gfx_d3d/r_cmdbuf.cpp
		code/src_noserver/gfx_d3d/r_compile_shader.cpp
		code/src_noserver/gfx_d3d/r_debug.cpp
		code/src_noserver/gfx_d3d/r_debug_alloc.cpp
		code/src_noserver/gfx_d3d/r_dobj_skin.cpp
		code/src_noserver/gfx_d3d/r_dpvs.cpp
		code/src_noserver/gfx_d3d/r_dpvs.h
		code/src_noserver/gfx_d3d/r_dpvs_dynmodel.cpp
		code/src_noserver/gfx_d3d/r_dpvs_entity.cpp
		code/src_noserver/gfx_d3d/r_dpvs_sceneent.cpp
		code/src_noserver/gfx_d3d/r_dpvs_static.cpp
		code/src_noserver/gfx_d3d/r_draw_bsp.cpp
		code/src_noserver/gfx_d3d/r_draw_lit.cpp
		code/src_noserver/gfx_d3d/r_draw_material.cpp
		code/src_noserver/gfx_d3d/r_draw_method.cpp
		code/src_noserver/gfx_d3d/r_draw_model_util.cpp
		code/src_noserver/gfx_d3d/r_draw_shadowablelight.cpp
		code/src_noserver/gfx_d3d/r_draw_staticmodel.cpp
		code/src_noserver/gfx_d3d/r_draw_sunshadow.cpp
		code/src_noserver/gfx_d3d/r_draw_xmodel.cpp
		code/src_noserver/gfx_d3d/r_draw_xmodel.h
		code/src_noserver/gfx_d3d/r_drawsurf.cpp
		code/src_noserver/gfx_d3d/r_dvars.cpp
		code/src_noserver/gfx_d3d/r_extracam.cpp
		code/src_noserver/gfx_d3d/r_fog.cpp
		code/src_noserver/gfx_d3d/r_font.cpp
		code/src_noserver/gfx_d3d/r_font_load_db.h
		code/src_noserver/gfx_d3d/r_font_load_obj.cpp
		code/src_noserver/gfx_d3d/r_fonticon.cpp
		code/src_noserver/gfx_d3d/r_fonticon_load_db.h
		code/src_noserver/gfx_d3d/r_gpu_timer.cpp
		code/src_noserver/gfx_d3d/r_image.cpp
		code/src_noserver/gfx_d3d/r_image_load_common.cpp
		code/src_noserver/gfx_d3d/r_image_load_db.h
		code/src_noserver/gfx_d3d/r_image_load_obj.cpp
		code/src_noserver/gfx_d3d/r_image_wavelet.cpp
		code/src_noserver/gfx_d3d/r_init.cpp
		code/src_noserver/gfx_d3d/r_light.cpp
		code/src_noserver/gfx_d3d/r_light_load_db.h
		code/src_noserver/gfx_d3d/r_light_load_obj.cpp
		code/src_noserver/gfx_d3d/r_marks.cpp
		code/src_noserver/gfx_d3d/r_material.cpp
		code/src_noserver/gfx_d3d/r_material.h
		code/src_noserver/gfx_d3d/r_material_consts.cpp
		code/src_noserver/gfx_d3d/r_material_load_db.h
		code/src_noserver/gfx_d3d/r_material_load_obj.cpp
		code/src_noserver/gfx_d3d/r_material_pass_load_obj.cpp
		code/src_noserver/gfx_d3d/r_mem_track.cpp
		code/src_noserver/gfx_d3d/r_meshdata.cpp
		code/src_noserver/gfx_d3d/r_model.cpp
		code/src_noserver/gfx_d3d/r_model_lighting.cpp
		code/src_noserver/gfx_d3d/r_model_lighting.h
		code/src_noserver/gfx_d3d/r_model_lod.cpp
		code/src_noserver/gfx_d3d/r_model_pose.cpp
		code/src_noserver/gfx_d3d/r_model_skin.cpp
		code/src_noserver/gfx_d3d/r_outdoor.cpp
		code/src_noserver/gfx_d3d/r_perf_timer.cpp
		code/src_noserver/gfx_d3d/r_pix_profile.h
		code/src_noserver/gfx_d3d/r_pointlights.cpp
		code/src_noserver/gfx_d3d/r_pretess.cpp
		code/src_noserver/gfx_d3d/r_primarylights.cpp
		code/src_noserver/gfx_d3d/r_primarylights_cull.h
		code/src_noserver/gfx_d3d/r_qrcode.cpp
		code/src_noserver/gfx_d3d/r_reflection_probe.cpp
		code/src_noserver/gfx_d3d/r_reflection_probe_load_db.h
		code/src_noserver/gfx_d3d/r_rendercmds.cpp
		code/src_noserver/gfx_d3d/r_rendertarget.cpp
		code/src_noserver/gfx_d3d/r_rope_render.cpp
		code/src_noserver/gfx_d3d/r_scene.cpp
		code/src_noserver/gfx_d3d/r_screenshot.cpp
		code/src_noserver/gfx_d3d/r_setstate_d3d.h
		code/src_noserver/gfx_d3d/r_shade.cpp
		code/src_noserver/gfx_d3d/r_shade.h
		code/src_noserver/gfx_d3d/r_shader_constant_set.cpp
		code/src_noserver/gfx_d3d/r_skinnedverts_load_db.h
		code/src_noserver/gfx_d3d/r_sky.cpp
		code/src_noserver/gfx_d3d/r_sky_load_obj.cpp
		code/src_noserver/gfx_d3d/r_skybox.cpp
		code/src_noserver/gfx_d3d/r_spotshadow.cpp
		code/src_noserver/gfx_d3d/r_sprite.cpp
		code/src_noserver/gfx_d3d/r_state.cpp
		code/src_noserver/gfx_d3d/r_state.h
		code/src_noserver/gfx_d3d/r_state_utils.cpp
		code/src_noserver/gfx_d3d/r_staticmodel.cpp
		code/src_noserver/gfx_d3d/r_staticmodel_load_db.h
		code/src_noserver/gfx_d3d/r_staticmodel_load_obj.cpp
		code/src_noserver/gfx_d3d/r_sunshadow.cpp
		code/src_noserver/gfx_d3d/r_surface_load_db.h
		code/src_noserver/gfx_d3d/r_types_d3d.h
		code/src_noserver/gfx_d3d/r_ui3d.cpp
		code/src_noserver/gfx_d3d/r_utils.cpp
		code/src_noserver/gfx_d3d/r_warn.cpp
		code/src_noserver/gfx_d3d/r_wind.cpp
		code/src_noserver/gfx_d3d/r_workercmds.cpp
		code/src_noserver/gfx_d3d/r_workercmds_common.cpp
		code/src_noserver/gfx_d3d/r_xsurface.cpp
		code/src_noserver/gfx_d3d/r_xsurface_load_db.h
		code/src_noserver/gfx_d3d/rb_backend.cpp
		code/src_noserver/gfx_d3d/rb_backend.h
		code/src_noserver/gfx_d3d/rb_corona.cpp
		code/src_noserver/gfx_d3d/rb_debug.cpp
		code/src_noserver/gfx_d3d/rb_depthprepass.cpp
		code/src_noserver/gfx_d3d/rb_draw3d.cpp
		code/src_noserver/gfx_d3d/rb_fog.cpp
		code/src_noserver/gfx_d3d/rb_imagefilter.cpp
		code/src_noserver/gfx_d3d/rb_imagetouch.cpp
		code/src_noserver/gfx_d3d/rb_light.cpp
		code/src_noserver/gfx_d3d/rb_postfx.cpp
		code/src_noserver/gfx_d3d/rb_query.cpp
		code/src_noserver/gfx_d3d/rb_query_d3d.h
		code/src_noserver/gfx_d3d/rb_shade.cpp
		code/src_noserver/gfx_d3d/rb_showcollision.cpp
		code/src_noserver/gfx_d3d/rb_sky.cpp
		code/src_noserver/gfx_d3d/rb_spotshadow.cpp
		code/src_noserver/gfx_d3d/rb_state.cpp
		code/src_noserver/gfx_d3d/rb_stats.cpp
		code/src_noserver/gfx_d3d/rb_sunshadow.cpp
		code/src_noserver/gfx_d3d/rb_tess.cpp
		code/src_noserver/glass/glass_allocator.cpp
		code/src_noserver/glass/glass_allocator.h
		code/src_noserver/glass/glass_client.cpp
		code/src_noserver/glass/glass_load_db.h
		code/src_noserver/glass/glass_load_obj.cpp
		code/src_noserver/glass/glass_public.h
		code/src_noserver/glass/glass_renderer.cpp
		code/src_noserver/glass/glass_server.cpp
		code/src_noserver/glass/glass_shard.cpp
		code/src_noserver/glass/glass_shard.h
		code/src_noserver/groupvoice/decode.cpp
		code/src_noserver/groupvoice/encode.cpp
		code/src_noserver/groupvoice/groupvoice_public.h
		code/src_noserver/groupvoice/play.cpp
		code/src_noserver/groupvoice/play_dsound.cpp
		code/src_noserver/groupvoice/record.cpp
		code/src_noserver/groupvoice/record_dsound.cpp
		code/src_noserver/ik/ik.cpp
		code/src_noserver/ik/ik_import.cpp
		code/src_noserver/ik/ik_import.h
		code/src_noserver/ik/ik_layers.cpp
		code/src_noserver/ik/ik_math.cpp
		code/src_noserver/ik/ik_process.cpp
		code/src_noserver/ik/ik_public.h
		code/src_noserver/ipak/ipak_game.cpp
		code/src_noserver/ipak/ipak_public.h
		code/src_noserver/json/json.cpp
		code/src_noserver/json/json_public.h
		code/src_noserver/leaderboard/leaderboard_load_db.h
		code/src_noserver/leaderboard/leaderboard_load_obj.cpp
		code/src_noserver/leaderboard/leaderboard_public.h
		code/src_noserver/live/live.cpp
		code/src_noserver/live/live_anticheat.cpp
		code/src_noserver/live/live_counter.cpp
		code/src_noserver/live/live_dedicated.cpp
		code/src_noserver/live/live_doublexp.cpp
		code/src_noserver/live/live_elite.cpp
		code/src_noserver/live/live_fileshare.cpp
		code/src_noserver/live/live_fileshare_cache.cpp
		code/src_noserver/live/live_fileshare_search.cpp
		code/src_noserver/live/live_fileshare_tables.h
		code/src_noserver/live/live_friends.cpp
		code/src_noserver/live/live_friends_pc.cpp
		code/src_noserver/live/live_groups_dw.cpp
		code/src_noserver/live/live_leaderboard_dw.cpp
		code/src_noserver/live/live_leaderboards_dedicated.cpp
		code/src_noserver/live/live_league_friends.cpp
		code/src_noserver/live/live_leagues.cpp
		code/src_noserver/live/live_metplayer.cpp
		code/src_noserver/live/live_presence_win.cpp
		code/src_noserver/live/live_public.h
		code/src_noserver/live/live_sessions.cpp
		code/src_noserver/live/live_sessions_delegate.cpp
		code/src_noserver/live/live_sessions_dw.cpp
		code/src_noserver/live/live_sessions_win.cpp
		code/src_noserver/live/live_stats.cpp
		code/src_noserver/live/live_steam.cpp
		code/src_noserver/live/live_steam_achievements.cpp
		code/src_noserver/live/live_steam_server.cpp
		code/src_noserver/live/live_storage.cpp
		code/src_noserver/live/live_storage_pub.cpp
		code/src_noserver/live/live_storage_streambuff.cpp
		code/src_noserver/live/live_storage_win.cpp
		code/src_noserver/live/live_tracker.cpp
		code/src_noserver/live/live_twitch.cpp
		code/src_noserver/live/live_twitter.cpp
		code/src_noserver/live/live_voice.cpp
		code/src_noserver/live/live_vote.cpp
		code/src_noserver/live/live_win.cpp
		code/src_noserver/live/live_youtube.cpp
		code/src_noserver/lui/lui_cod_fileio.cpp
		code/src_noserver/lui/lui_public.h
		code/src_noserver/mjpeg/avi.cpp
		code/src_noserver/mjpeg/avi.h
		code/src_noserver/mjpeg/jpeg.cpp
		code/src_noserver/mjpeg/jpeg_screenshot.cpp
		code/src_noserver/mjpeg/mjpeg.cpp
		code/src_noserver/mjpeg/mjpeg_public.h
		code/src_noserver/mjpeg/vpx.cpp
		code/src_noserver/mjpeg/yuv.cpp
		code/src_noserver/physics/destructible.cpp
		code/src_noserver/physics/destructible.h
		code/src_noserver/physics/destructibledef_load_db.h
		code/src_noserver/physics/destructibledef_load_obj.cpp
		code/src_noserver/physics/phys_auto_rigid_body.cpp
		code/src_noserver/physics/phys_colgeom.cpp
		code/src_noserver/physics/phys_colgeom.h
		code/src_noserver/physics/phys_collision.cpp
		code/src_noserver/physics/phys_convert.h
		code/src_noserver/physics/phys_effects.cpp
		code/src_noserver/physics/phys_gjk_collision_detection.cpp
		code/src_noserver/physics/phys_gjk_collision_detection.h
		code/src_noserver/physics/phys_main.cpp
		code/src_noserver/physics/phys_render.cpp
		code/src_noserver/physics/phys_traverse.cpp
		code/src_noserver/physics/phys_visitor.h
		code/src_noserver/physics/physconstraints_load_db.h
		code/src_noserver/physics/physconstraints_load_obj.cpp
		code/src_noserver/physics/physics_public.h
		code/src_noserver/physics/physpreset_load_db.h
		code/src_noserver/physics/physpreset_load_obj.cpp
		code/src_noserver/physics/proftimers.h
		code/src_noserver/physics/rope.cpp
		code/src_noserver/physics/rope_gamestate.cpp
		code/src_noserver/physics/xdoll.cpp
		code/src_noserver/qcommon/bitarray.h
		code/src_noserver/qcommon/cm_brush_related_load_db.h
		code/src_noserver/qcommon/cm_load.cpp
		code/src_noserver/qcommon/cm_load_obj.cpp
		code/src_noserver/qcommon/cm_local_load_db.h
		code/src_noserver/qcommon/cm_mesh.cpp
		code/src_noserver/qcommon/cm_public.h
		code/src_noserver/qcommon/cm_showcollision.cpp
		code/src_noserver/qcommon/cm_staticmodel.cpp
		code/src_noserver/qcommon/cm_staticmodel_load_obj.cpp
		code/src_noserver/qcommon/cm_test.cpp
		code/src_noserver/qcommon/cm_trace.cpp
		code/src_noserver/qcommon/cm_tracebox.cpp
		code/src_noserver/qcommon/cm_world.cpp
		code/src_noserver/qcommon/cmd.cpp
		code/src_noserver/qcommon/cmd.h
		code/src_noserver/qcommon/com_bsp.cpp
		code/src_noserver/qcommon/com_bsp_api.h
		code/src_noserver/qcommon/com_bsp_load_db.h
		code/src_noserver/qcommon/com_bsp_load_obj.cpp
		code/src_noserver/qcommon/com_buildinfo.cpp
		code/src_noserver/qcommon/com_clients.cpp
		code/src_noserver/qcommon/com_factions.cpp
		code/src_noserver/qcommon/com_gamemodes.cpp
		code/src_noserver/qcommon/com_gametypesettings.cpp
		code/src_noserver/qcommon/com_loadutils.cpp
		code/src_noserver/qcommon/com_profilemapload.cpp
		code/src_noserver/qcommon/com_sessionmodes.cpp
		code/src_noserver/qcommon/common.cpp
		code/src_noserver/qcommon/console_mp.cpp
		code/src_noserver/qcommon/content.cpp
		code/src_noserver/qcommon/dobj_management.cpp
		code/src_noserver/qcommon/dvar_cmds.cpp
		code/src_noserver/qcommon/com_fileaccess.cpp
		code/src_noserver/qcommon/files.cpp
		code/src_noserver/qcommon/gdt_remote.cpp
		code/src_noserver/qcommon/graph.cpp
		code/src_noserver/qcommon/huffman.cpp
		code/src_noserver/qcommon/keyvaluepairs.cpp
		code/src_noserver/qcommon/keyvaluepairs_load_db.h
		code/src_noserver/qcommon/mem_track.cpp
		code/src_noserver/qcommon/mem_track.h
		code/src_noserver/qcommon/memory_block_load_db.h
		code/src_noserver/qcommon/migration.cpp
		code/src_noserver/qcommon/msg.cpp
		code/src_noserver/qcommon/msg.h
		code/src_noserver/qcommon/msg_crc.cpp
		code/src_noserver/qcommon/msg_mp.cpp
		code/src_noserver/qcommon/net.h
		code/src_noserver/qcommon/net_chan.cpp
		code/src_noserver/qcommon/net_queue.cpp
		code/src_noserver/qcommon/qcommon_public.h
		code/src_noserver/qcommon/qdb_load_db.h
		code/src_noserver/qcommon/radiant_remote.cpp
		code/src_noserver/qcommon/rawfile_load_db.h
		code/src_noserver/qcommon/scriptparsetree_load_db.h
		code/src_noserver/qcommon/slug_load_db.h
		code/src_noserver/qcommon/statmonitor.cpp
		code/src_noserver/qcommon/stream.cpp
		code/src_noserver/qcommon/stream_platform.cpp
		code/src_noserver/qcommon/stringed_remote.cpp
		code/src_noserver/qcommon/sv_msg_write.cpp
		code/src_noserver/qcommon/sv_msg_write_mp.cpp
		code/src_noserver/qcommon/threads.cpp
		code/src_noserver/qcommon/threads_interlock.h
		code/src_noserver/qcommon/tl_support.cpp
		code/src_noserver/qcommon/xglobals_load_db.h
		code/src_noserver/qcommon/zbarrier_load_db.h
		code/src_noserver/qcommon/zbarrier_load_obj.cpp
		code/src_noserver/ragdoll/ragdoll.cpp
		code/src_noserver/ragdoll/ragdoll.h
		code/src_noserver/ragdoll/ragdoll_cmds.cpp
		code/src_noserver/ragdoll/ragdoll_controller.cpp
		code/src_noserver/ragdoll/ragdoll_public.h
		code/src_noserver/ragdoll/ragdoll_quat.cpp
		code/src_noserver/ragdoll/ragdoll_update.cpp
		code/src_noserver/renderer/renderer_public.h
		code/src_noserver/renderer/tr_types.h
		code/src_noserver/riotshield/riotshield.cpp
		code/src_noserver/riotshield/riotshield_client.cpp
		code/src_noserver/riotshield/riotshield_public.h
		code/src_noserver/riotshield/riotshield_server.cpp
		code/src_noserver/server/server_public.h
		code/src_noserver/server/sv_client.cpp
		code/src_noserver/server/sv_game.cpp
		code/src_noserver/server/sv_main.cpp
		code/src_noserver/server/sv_main_dw.cpp
		code/src_noserver/server/sv_migration.cpp
		code/src_noserver/server/sv_snapshot.cpp
		code/src_noserver/server/sv_snapshot_stats.cpp
		code/src_noserver/server/sv_world.cpp
		code/src_noserver/server_mp/server_mp_public.h
		code/src_noserver/server_mp/sv_archive_mp.cpp
		code/src_noserver/server_mp/sv_ccmds_mp.cpp
		code/src_noserver/server_mp/sv_client_mp.cpp
		code/src_noserver/server_mp/sv_connection_log.cpp
		code/src_noserver/server_mp/sv_init_mp.cpp
		code/src_noserver/server_mp/sv_main_mp.cpp
		code/src_noserver/server_mp/sv_main_pc_mp.cpp
		code/src_noserver/server_mp/sv_net_chan_mp.cpp
		code/src_noserver/server_mp/sv_snapshot_build_mp.cpp
		code/src_noserver/server_mp/sv_snapshot_caching_mp.cpp
		code/src_noserver/server_mp/sv_snapshot_mp.cpp
		code/src_noserver/server_mp/sv_snapshot_profile_mp.cpp
		code/src_noserver/sound/sd_api.cpp
		code/src_noserver/sound/sd_decode.cpp
		code/src_noserver/sound/sd_mixer.cpp
		code/src_noserver/sound/sd_output_xa2.cpp
		code/src_noserver/sound/sd_source.cpp
		code/src_noserver/sound/sd_stream.cpp
		code/src_noserver/sound/sd_voice.cpp
		code/src_noserver/sound/snd.cpp
		code/src_noserver/sound/snd_alias_db.h
		code/src_noserver/sound/snd_alias_load_db.h
		code/src_noserver/sound/snd_asset_bank.cpp
		code/src_noserver/sound/snd_asset_bank_load_db.h
		code/src_noserver/sound/snd_bank.cpp
		code/src_noserver/sound/snd_bank_load_db.h
		code/src_noserver/sound/snd_debug.cpp
		code/src_noserver/sound/snd_dsp.cpp
		code/src_noserver/sound/snd_dsp_radverb.cpp
		code/src_noserver/sound/snd_dvar.cpp
		code/src_noserver/sound/snd_globals.cpp
		code/src_noserver/sound/snd_load_db.h
		code/src_noserver/sound/snd_local.cpp
		code/src_noserver/sound/snd_log.cpp
		code/src_noserver/sound/snd_occlusion.cpp
		code/src_noserver/sound/snd_public_async.cpp
		code/src_noserver/sound/snd_public_async_q.cpp
		code/src_noserver/sound/snd_utils.cpp
		code/src_noserver/sound/snd_utils.h
		code/src_noserver/sound/sound_public.h
		code/src_noserver/steam/steam.cpp
		code/src_noserver/steam/steam_public.h
		code/src_noserver/stringed/stringed_hooks.cpp
		code/src_noserver/stringed/stringed_ingame.cpp
		code/src_noserver/stringed/stringed_interface.cpp
		code/src_noserver/stringed/stringed_load_db.h
		code/src_noserver/stringed/stringed_public.h
		code/src_noserver/tracers/tracer.cpp
		code/src_noserver/tracers/tracer_load_db.h
		code/src_noserver/tracers/tracer_load_obj.cpp
		code/src_noserver/tracers/tracers_public.h
		code/src_noserver/turret/turret_placement.cpp
		code/src_noserver/turret/turret_public.h
		code/src_noserver/ui/ui_atoms.cpp
		code/src_noserver/ui/ui_codtv.cpp
		code/src_noserver/ui/ui_emblem.cpp
		code/src_noserver/ui/ui_feeders.cpp
		code/src_noserver/ui/ui_friends.cpp
		code/src_noserver/ui/ui_keyboard.cpp
		code/src_noserver/ui/ui_local.h
		code/src_noserver/ui/ui_localvars.cpp
		code/src_noserver/ui/ui_main.cpp
		code/src_noserver/ui/ui_mem_track.cpp
		code/src_noserver/ui/ui_motd.cpp
		code/src_noserver/ui/ui_playlists.cpp
		code/src_noserver/ui/ui_public.h
		code/src_noserver/ui/ui_shared.cpp
		code/src_noserver/ui/ui_shared_load_db.h
		code/src_noserver/ui/ui_shared_obj.cpp
		code/src_noserver/ui/ui_ui3d_util.h
		code/src_noserver/ui/ui_utils.cpp
		code/src_noserver/ui/ui_utils.h
		code/src_noserver/ui/ui_utils_api.h
		code/src_noserver/ui/ui_voting.cpp
		code/src_noserver/ui_mp/ui_feeders_mp.cpp
		code/src_noserver/ui_mp/ui_gameinfo_mp.cpp
		code/src_noserver/ui_mp/ui_main_mp.cpp
		code/src_noserver/ui_mp/ui_mp_public.h
		code/src_noserver/universal/assertive.cpp
		code/src_noserver/universal/blackbox.cpp
		code/src_noserver/universal/blackbox_data.cpp
		code/src_noserver/universal/blackbox_data.h
		code/src_noserver/universal/com_color.h
		code/src_noserver/universal/com_constantconfigstrings.cpp
		code/src_noserver/universal/com_convexhull.cpp
		code/src_noserver/universal/com_encode.cpp
		code/src_noserver/universal/com_expressions.cpp
		code/src_noserver/universal/com_expressions_eval.cpp
		code/src_noserver/universal/com_expressions_load_db.h
		code/src_noserver/universal/com_files.cpp
		code/src_noserver/universal/com_files_wrapper_stdio.h
		code/src_noserver/universal/com_math.cpp
		code/src_noserver/universal/com_math.h
		code/src_noserver/universal/com_math_anglevectors.cpp
		code/src_noserver/universal/com_memory.cpp
		code/src_noserver/universal/com_pack.cpp
		code/src_noserver/universal/com_shared.cpp
		code/src_noserver/universal/com_stringtable.cpp
		code/src_noserver/universal/com_stringtable_load_db.h
		code/src_noserver/universal/com_stringtable_obj.cpp
		code/src_noserver/universal/com_tasks.cpp
		code/src_noserver/universal/com_utf.cpp
		code/src_noserver/universal/com_vector.h
		code/src_noserver/universal/com_workercmds.cpp
		code/src_noserver/universal/curve.cpp
		code/src_noserver/universal/curvemanager.cpp
		code/src_noserver/universal/dvar.cpp
		code/src_noserver/universal/eval.cpp
		code/src_noserver/universal/mem_firstfit.cpp
		code/src_noserver/universal/mem_fixed.cpp
		code/src_noserver/universal/mem_largelocal.cpp
		code/src_noserver/universal/mem_userhunk.cpp
		code/src_noserver/universal/memfile.cpp
		code/src_noserver/universal/memfile.h
		code/src_noserver/universal/physicalmemory.cpp
		code/src_noserver/universal/profile_mem.cpp
		code/src_noserver/universal/q_parse.cpp
		code/src_noserver/universal/q_shared.cpp
		code/src_noserver/universal/q_shared.h
		code/src_noserver/universal/query.cpp
		code/src_noserver/universal/reliablemsg.cpp
		code/src_noserver/universal/surfaceflags.cpp
		code/src_noserver/universal/techset_helper.cpp
		code/src_noserver/universal/timing.cpp
		code/src_noserver/universal/universal_public.h
		code/src_noserver/universal/win_common.cpp
		code/src_noserver/vcs/vcs.cpp
		code/src_noserver/vcs/vcs_hooks.cpp
		code/src_noserver/vcs/vcs_public.h
		code/src_noserver/vehicle/nitrous_vehicle.cpp
		code/src_noserver/vehicle/nitrous_vehicle.h
		code/src_noserver/vehicle/nitrous_vehicle_constraint.cpp
		code/src_noserver/vehicle/nitrous_vehicle_controller.cpp
		code/src_noserver/vehicle/nitrous_vehicle_effects.cpp
		code/src_noserver/vehicle/vehicle_public.h
		code/src_noserver/win32/win_configure.cpp
		code/src_noserver/win32/win_content.cpp
		code/src_noserver/win32/win_gamepad.cpp
		code/src_noserver/win32/win_input.cpp
		code/src_noserver/win32/win_localize.cpp
		code/src_noserver/win32/win_main.cpp
		code/src_noserver/win32/win_mini_dumper.cpp
		code/src_noserver/win32/win_net.cpp
		code/src_noserver/win32/win_remote.cpp
		code/src_noserver/win32/win_shared.cpp
		code/src_noserver/win32/win_splash.cpp
		code/src_noserver/win32/win_syscon.cpp
		code/src_noserver/win32/win_voice.cpp
		code/src_noserver/win32/win_workercmds.cpp
		code/src_noserver/win32/win32_public.h
		code/src_noserver/win32/windm.cpp
		code/src_noserver/xanim/dobj.cpp
		code/src_noserver/xanim/dobj_skel.cpp
		code/src_noserver/xanim/dobj_utils.cpp
		code/src_noserver/xanim/xanim.cpp
		code/src_noserver/xanim/xanim_calc.cpp
		code/src_noserver/xanim/xanim_clientnotify.cpp
		code/src_noserver/xanim/xanim_load_db.h
		code/src_noserver/xanim/xanim_load_obj.cpp
		code/src_noserver/xanim/xanim_public.h
		code/src_noserver/xanim/xanim_readwrite.cpp
		code/src_noserver/xanim/xmodel.cpp
		code/src_noserver/xanim/xmodel_load_db.h
		code/src_noserver/xanim/xmodel_load_obj.cpp
		code/src_noserver/xanim/xmodel_load_phys_collmap.cpp
		code/src_noserver/xanim/xmodel_utils.cpp
		code/src_noserver/zlib/adler32.cpp
		code/src_noserver/zlib/crc32.cpp
		code/src_noserver/zlib/crc32.h
		code/src_noserver/zlib/crypt.h
		code/src_noserver/zlib/deflate.cpp
		code/src_noserver/zlib/deflate.h
		code/src_noserver/zlib/inffast.cpp
		code/src_noserver/zlib/inffast.h
		code/src_noserver/zlib/inffixed.h
		code/src_noserver/zlib/inflate.cpp
		code/src_noserver/zlib/inflate.h
		code/src_noserver/zlib/inftrees.cpp
		code/src_noserver/zlib/inftrees.h
		code/src_noserver/zlib/ioapi.h
		code/src_noserver/zlib/trees.cpp
		code/src_noserver/zlib/trees.h
		code/src_noserver/zlib/unzip.cpp
		code/src_noserver/zlib/unzip.h
		code/src_noserver/zlib/zconf.h
		code/src_noserver/zlib/zlib.h
		code/src_noserver/zlib/zutil.cpp
		code/src_noserver/zlib/zutil.h
		code/src_noserver/vars.h
		code/src_noserver/vars.cpp
		code/src_noserver/win32/resource.h
		code/src_noserver/win32/cod.rc
		code/tl/base/tl_defs.h
		code/tl/base/tl_system.h
		code/tl/base/tl_thread.h
)

target_precompile_headers(t6mp
        PUBLIC
        code/src_noserver/types.h
        code/src_noserver/functions.h
        #codsrc/src/macros.h
)

add_definitions(-DDEDICATED=0 -DXENON=0)
#add_definitions(-DDEDICATED=1)

#add_definitions(-D_CRT_SECURE_NO_WARNINGS -D_ALLOW_RTCc_IN_STL)

target_compile_definitions(t6mp PUBLIC
    "_DEBUG"
    "WIN32;"
    "_WINDOWS;"
    "_CRT_SECURE_NO_WARNINGS"
)

target_link_options(t6mp PUBLIC
    /NOLOGO;
    /STACK:8388608;
    /DEBUG
    #/MACHINE:X86;
    /SUBSYSTEM:WINDOWS;
    /DYNAMICBASE:NO;
    /INCREMENTAL:NO)

target_link_libraries(t6mp winmm.lib wsock32.lib d3d9.lib dsound.lib xinput.lib nvapi.lib dxgi.lib d3d11.lib)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)